# poker-puzzle

./: .travis.yml  README.md
Dave-Elixir/: repl.exs
Dave-F#/: README.md  rank_enum.fs  rank_int.fs  rank_sum.fs  repl.fsx
Nick-Haskell/: .gitignore  .travis.yml  README.md  understanding-guard.md
Nick-Haskell/PokerPuzzle.hsproj/: .uuid  Main.hs  Model.hs  Parsing.hs  PokerPuzzle.cabal  PokerPuzzle.hs  Tests.hs  _Main.hsplay  _Parsing.hsplay  _PokerPuzzle.hsplay  _Tests.hsplay
Nick-Swift/: .gitignore  README.md
Nick-Swift/PokerPuzzle/: Model.swift  Parsing.swift  PokerPuzzle.swift  main.swift
Nick-Swift/PokerPuzzle.xcodeproj/: project.pbxproj
Nick-Swift/PokerPuzzle/PokerPuzzle.xcodeproj/: project.pbxproj
Nick-Swift/PokerPuzzle/PokerPuzzle.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Nick-Swift/PokerPuzzle/PokerPuzzle.xcodeproj/xcuserdata/nickager.xcuserdatad/xcschemes/: xcschememanagement.plist
Nick-Swift/PokerPuzzleTests/: PokerPuzzleTests.swift
Stephen-Idris/: Main.idr  Parsing.idr  README.md  Scoring.idr  Sorting.idr  Types.idr
alex-jonathan-clj/: CHANGELOG.md  README.md  project.clj
alex-jonathan-clj/doc/: intro.md
alex-jonathan-clj/src/p54/: core.clj
alex-jonathan-clj/test/p54/: core_test.clj
danclj/: CHANGELOG.md  README.md  project.clj
danclj/doc/: intro.md
danclj/src/danclj/: poker.clj
danclj/test/danclj/: poker_test.clj
hhdave-cl/: README.txt  problem-54-with-read-macro.lisp  problem-54.lisp  read-macro.lisp
martin-haskell/: README.md  TODO.md  martin-haskell.cabal  poker-puzzle.cabal
martin-haskell/app/: Main.hs
martin-haskell/src/: Lib.hs  Model.hs  Parsing.hs  Util.hs
martin-haskell/test/: Spec.hs
