name:                martin-haskell
version:             0.1.0.0
synopsis:            Haskell solution to Project Euler puzzle 54 (Scoring Poker hands)
-- description:
homepage:            https://github.com/exeter-fp/poker-puzzle/martin-haskell/README.md
license:             BSD3
--license-file:        LICENSE
author:              Martin Rist
maintainer:          mlr-github@martinrist.com
copyright:           2017 Martin Rist
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable martin-haskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , martin-haskell
  default-language:    Haskell2010

test-suite martin-haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , martin-haskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/exeter-fp/poker-puzzle
