name: PokerPuzzle
version: 1.0
cabal-version: 1.11
build-type: Simple
license: AllRightsReserved
stability: experimental
data-files:
    p054_poker.txt
x-ghc-framework-version: 7.10.3-6.29-1
x-last-ide-version: HfM1.4.0
Executable PokerPuzzle
  main-is: PokerPuzzle.hs
  buildable: True
  build-depends:
      base -any,
      text -any
  other-modules:
      Model
      Main
      Parsing
