name: PokerPuzzle
version: 1.0
cabal-version: 1.11
build-type: Simple
license: AllRightsReserved
stability: experimental
data-files:
    p054_poker.txt
x-ghc-framework-version: 8.0.2-8.9-3
x-last-ide-version: HfM1.5.1
Executable PokerPuzzle
  main-is: Main.hs
  buildable: True
  build-depends:
      base -any,
      parallel -any,
      HUnit -any,
      text -any,
      hspec -any
  other-modules:
      Model
      PokerPuzzle
      Parsing
      Tests
